<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feed_item"
        android:textColor="@color/navbar_color_text"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/home" />
    <item
        android:id="@+id/add_item"
        android:icon="@android:drawable/ic_input_add"
        android:textColor="@color/navbar_color_text"
        android:title="@string/memo" />
    <item
        android:id="@+id/memo_item"
        android:icon="@android:drawable/ic_menu_agenda"
        android:textColor="@color/navbar_color_text"
        android:title="@string/memo" />
    <item
        android:id="@+id/perso_item"
        android:icon="@android:drawable/btn_star"
        android:textColor="@color/navbar_color_text"
        android:title="@string/perso" />
</menu>